--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.article.field_gallery_above_body.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.article.field_gallery_above_body.yml
@@ -12,7 +12,7 @@ id: node.article.field_gallery_above_body
 field_name: field_gallery_above_body
 entity_type: node
 bundle: article
-label: 'Bildergalerie unten'
+label: 'Bildergalerie oben'
 description: ''
 required: false
 translatable: false
