--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.field_collection_item.field_gallery_images.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.field_collection_item.field_gallery_images.default.yml
@@ -6,9 +6,10 @@ dependencies:
     - field.field.field_collection_item.field_gallery_images.field_gallery_image
     - field.field.field_collection_item.field_gallery_images.field_gallery_image_caption
     - field_collection.field_collection.field_gallery_images
+    - image.style.gallery_full
     - image.style.image_gallery_thumb
   module:
-    - image
+    - colorbox
 id: field_collection_item.field_gallery_images.default
 targetEntityType: field_collection_item
 bundle: field_gallery_images
@@ -18,10 +19,15 @@ content:
     weight: 0
     label: visually_hidden
     settings:
-      image_style: image_gallery_thumb
-      image_link: file
+      colorbox_node_style: image_gallery_thumb
+      colorbox_node_style_first: ''
+      colorbox_image_style: gallery_full
+      colorbox_gallery: page
+      colorbox_gallery_custom: ''
+      colorbox_caption: auto
+      colorbox_caption_custom: ''
     third_party_settings: {  }
-    type: image
+    type: colorbox
     region: content
 hidden:
   field_gallery_image_caption: true
