Neuere Version von Quick Node Clone

--- a/modules/contrib/quick_node_clone/quick_node_clone.routing.yml
+++ b/modules/contrib/quick_node_clone/quick_node_clone.routing.yml
@@ -1,12 +1,7 @@
 quick_node_clone.node.quick_clone:
-  path: '/node/{node}/quick_clone'
+  path: '/clone/{node}/quick_clone'
   defaults:
     _controller: '\Drupal\quick_node_clone\Controller\QuickNodeCloneNodeController::cloneNode'
     _title_callback: '\Drupal\quick_node_clone\Controller\QuickNodeCloneNodeController::clonePageTitle'
   requirements:
     _node_add_access: 'node:{node_type}'
-  options:
-    _node_operation_route: TRUE
-    parameters:
-      node_type:
-        with_config_overrides: TRUE
