--- a/modules/contrib/quick_node_clone/quick_node_clone.info.yml
+++ b/modules/contrib/quick_node_clone/quick_node_clone.info.yml
@@ -1,6 +1,11 @@
 name: Quick Node Clone
 type: module
 description: 'Quickly clone a node with regular fields.'
-core: 8.x
+# core: 8.x
 dependencies:
   - node
+# Information added by Drupal.org packaging script on 2017-04-12
+version: '8.x-1.1'
+core: '8.x'
+project: 'quick_node_clone'
+datestamp: 1492008245
