--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.player.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.player.default.yml
@@ -25,6 +25,15 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
+  field_dwz:
+    type: number_integer
+    weight: 3
+    region: content
+    label: inline
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
   field_function_club:
     weight: 1
     label: above
@@ -43,6 +52,5 @@ content:
     type: image
     region: content
 hidden:
-  field_dwz: true
   langcode: true
   links: true
