Update von Live

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.events_list.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.events_list.yml
@@ -484,7 +484,18 @@ display:
             label: ''
           granularity: day
           plugin_id: datetime
-      header: {  }
+      header:
+        area_text_custom:
+          id: area_text_custom
+          table: views
+          field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content: "<h3>Kein Vereinsabend (Fr.) und Jugendtraining (Mo.) von 22.06.-02.08.2017</h3>\n<p>Der Lister Turm hat während den Sommerferien abends geschlossen. \nBesuchen Sie uns wieder ab 04.08.</p>"
+          plugin_id: text_custom
       footer: {  }
       empty: {  }
       relationships: {  }
