--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.event.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.event.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.event.field_ev_start_time
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_room
+    - field.field.node.event.field_event_type
     - node.type.event
   module:
     - datetime
@@ -31,7 +32,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -60,7 +61,7 @@ content:
     type: hms_default
     region: content
   field_event_location:
-    weight: 6
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -68,22 +69,31 @@ content:
     type: string_textfield
     region: content
   field_event_room:
-    weight: 5
+    weight: 6
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_event_type:
+    weight: 5
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   langcode:
     type: language_select
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     region: content
   node_class:
     type: string_textfield
-    weight: 13
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -91,7 +101,7 @@ content:
     region: content
   path:
     type: path
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -99,14 +109,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 11
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 12
     third_party_settings: {  }
     region: content
   title:
@@ -119,7 +129,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
