--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.events_list.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.events_list.yml
@@ -8,10 +8,13 @@ dependencies:
     - field.storage.node.field_event_room
     - node.type.event
     - system.menu.main
+    - taxonomy.vocabulary.event_type
   module:
+    - better_exposed_filters
     - datetime
     - hms_field
     - node
+    - taxonomy
     - user
 id: events_list
 label: Terminkalender
@@ -494,6 +497,7 @@ display:
       use_more: true
       use_more_always: true
       use_more_text: '» alle Termine'
+      use_ajax: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -815,6 +819,7 @@ display:
         use_more_text: false
         filters: false
         filter_groups: false
+        exposed_form: false
       use_more_always: true
       use_more_text: '» alle Termine'
       filters:
@@ -878,16 +883,92 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
+        field_event_type_target_id:
+          id: field_event_type_target_id
+          table: node__field_event_type
+          field: field_event_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_event_type_target_id_op
+            label: 'Art der Veranstaltung'
+            description: ''
+            use_operator: false
+            operator: field_event_type_target_id_op
+            identifier: field_event_type_target_id
+            required: false
+            remember: false
+            multiple: true
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              redakteur: '0'
+              chefredakteur: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: event_type
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       filter_groups:
         operator: AND
         groups:
           1: AND
+      exposed_form:
+        type: bef
+        options:
+          submit_button: Apply
+          reset_button: false
+          reset_button_label: Reset
+          exposed_sorts_label: 'Sort by'
+          expose_sort_order: true
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+          input_required: false
+          text_input_required: 'Wählen Sie eine beliebige Filter und klicken Sie auf Anwenden, um Ergebnisse zu sehen'
+          bef:
+            general:
+              allow_secondary: false
+              secondary_label: 'Erweiterte Optionen'
+              autosubmit: true
+              autosubmit_hide: true
+            field_event_type_target_id:
+              bef_format: default
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: false
+                is_secondary: false
+                rewrite:
+                  filter_rewrite_values: ''
+          text_input_required_format: basic_html
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
+        - user
         - 'user.node_grants:view'
         - user.permissions
       tags:
