Rechte für Chefredakteur für Webform, CC-Mail bei Anmeldung Vereinsmitglied auch an Gerhard Hayen

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
@@ -109,7 +109,7 @@ handlers:
     weight: 0
     settings:
       to_mail: h.schilling@kabelmail.de
-      cc_mail: thomas@rufzeichen-online.de
+      cc_mail: 'thomas@rufzeichen-online.de, hayen@schachklub-hannover.de'
       bcc_mail: ''
       from_mail: hayen@schachklub-hannover.de
       from_name: default
