--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -15,6 +15,7 @@ permissions:
   - 'access toolbar'
   - 'access user profiles'
   - 'administer nodes'
+  - 'administer webform submission'
   - 'bypass node access'
   - 'create url aliases'
   - 'entityconnect add button'
@@ -24,4 +25,5 @@ permissions:
   - 'translate interface'
   - 'use text format basic_html'
   - 'use text format tables_only'
+  - 'view any webform submission'
   - 'view the administration theme'
