Config Update von Live

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
@@ -20,4 +20,5 @@ permissions:
   - 'edit own event content'
   - 'entityconnect add button'
   - 'entityconnect edit button'
+  - 'view any unpublished page content'
   - 'view the administration theme'
