--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -15,6 +15,7 @@ module:
   comment: 0
   config: 0
   contact: 0
+  content_access: 0
   contextual: 0
   ctools: 0
   datetime: 0
@@ -69,6 +70,7 @@ module:
   tour: 0
   update: 0
   user: 0
+  view_unpublished: 0
   views_ui: 0
   webform: 0
   webform_node: 0
