--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
@@ -8,7 +8,7 @@ id: feedback
 label: Kontakt
 recipients:
   - info@rufzeichen-online.de
-  - hayen@schachklub-hannover.de
+  - lukahoffmann@aol.com
 reply: ''
 weight: 0
 message: 'Ihre Nachricht wurde gesendet.'
