--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
@@ -9,6 +9,7 @@ label: Kontakt
 recipients:
   - info@rufzeichen-online.de
   - lukahoffmann@aol.com
+  - nils@familie-baum.net
 reply: ''
 weight: 0
 message: 'Ihre Nachricht wurde gesendet.'
