--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.page.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.page.default.yml
@@ -60,7 +60,8 @@ content:
   langcode:
     type: language_select
     weight: 4
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
     region: content
   node_class:
@@ -82,6 +83,13 @@ content:
     settings:
       display_label: true
     weight: 7
+    third_party_settings: {  }
+    region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 121
     third_party_settings: {  }
     region: content
   sticky:
