--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -20,6 +20,7 @@ permissions:
   - 'create url aliases'
   - 'entityconnect add button'
   - 'entityconnect edit button'
+  - 'override all published option'
   - 'post comments'
   - 'skip comment approval'
   - 'translate interface'
