--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.content.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.content.yml
@@ -5,10 +5,11 @@ dependencies:
   module:
     - node
     - user
+    - view_unpublished
 _core:
   default_config_hash: YIwhIF9MSP1E_HMam6MrYeti_UqMXQiLDMjDsPFKK8s
 id: content
-label: Content
+label: Inhalt
 module: node
 description: 'Die Inhalte finden und verwalten.'
 tag: default
@@ -31,11 +32,11 @@ display:
         options:
           submit_button: Filter
           reset_button: true
-          reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          reset_button_label: Zurücksetzen
+          exposed_sorts_label: 'Sortieren nach'
           expose_sort_order: true
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Aufsteigend
+          sort_desc_label: Absteigend
       pager:
         type: full
         options:
@@ -477,6 +478,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -505,7 +507,7 @@ display:
           exposed: true
           expose:
             operator_id: langcode_op
-            label: Language
+            label: Sprache
             description: ''
             use_operator: false
             operator: langcode_op
@@ -534,7 +536,7 @@ display:
           entity_type: node
           entity_field: langcode
       sorts: {  }
-      title: Content
+      title: Inhalt
       empty:
         area_text_custom:
           id: area_text_custom
@@ -578,7 +580,7 @@ display:
       path: admin/content/node
       menu:
         type: 'default tab'
-        title: Content
+        title: Inhalt
         description: ''
         menu_name: admin
         weight: -10
@@ -587,13 +589,13 @@ display:
         expanded: false
       tab_options:
         type: normal
-        title: Content
+        title: Inhalt
         description: 'Inhalt finden und verwalten'
         menu_name: admin
         weight: -10
       display_extenders: {  }
     display_plugin: page
-    display_title: Page
+    display_title: Seite
     id: page_1
     position: 1
     cache_metadata:
