--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.webform.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.webform.default.yml
@@ -35,8 +35,7 @@ content:
   langcode:
     type: language_select
     weight: 2
-    settings:
-      include_locked: true
+    settings: {  }
     third_party_settings: {  }
     region: content
   node_class:
@@ -58,13 +57,6 @@ content:
     settings:
       display_label: true
     weight: 15
-    third_party_settings: {  }
-    region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 121
     third_party_settings: {  }
     region: content
   sticky:
