--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.node.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.node.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: ydpmSCtxLjO9xqkBxObkeYx0Bf2dkW-d8bB_6Q1Ggjs
 id: node
-label: Inhalt
+label: Content
 tags:
   title: '[node:title] | [site:name]'
   description: '[node:summary]'
