--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.taxonomy_term.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.taxonomy_term.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: ShncZd3oX-UZDBGDUrgbRiZ2BmIJYSLHvIIPjq6tRAQ
 id: taxonomy_term
-label: Taxonomie-Begriff
+label: 'Taxonomy term'
 tags:
   title: '[term:name] | [site:name]'
   description: '[term:description]'
