--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.comment_publish_action.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.comment_publish_action.yml
@@ -9,5 +9,5 @@ _core:
 id: comment_publish_action
 label: 'Kommentar veröffentlichen'
 type: comment
-plugin: 'entity:publish_action:comment'
+plugin: comment_publish_action
 configuration: {  }
