--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.comment_save_action.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.comment_save_action.yml
@@ -9,5 +9,5 @@ _core:
 id: comment_save_action
 label: 'Kommentar speichern'
 type: comment
-plugin: 'entity:save_action:comment'
+plugin: comment_save_action
 configuration: {  }
