--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.comment_unpublish_action.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.comment_unpublish_action.yml
@@ -9,5 +9,5 @@ _core:
 id: comment_unpublish_action
 label: 'Kommentar zurücknehmen'
 type: comment
-plugin: 'entity:unpublish_action:comment'
+plugin: comment_unpublish_action
 configuration: {  }
