--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.node_save_action.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.node_save_action.yml
@@ -9,5 +9,5 @@ _core:
 id: node_save_action
 label: 'Inhalt speichern'
 type: node
-plugin: 'entity:save_action:node'
+plugin: node_save_action
 configuration: {  }
