--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.node_unpublish_action.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.node_unpublish_action.yml
@@ -9,5 +9,5 @@ _core:
 id: node_unpublish_action
 label: 'Die Veröffentlichung von Inhalt zurücknehmen'
 type: node
-plugin: 'entity:unpublish_action:node'
+plugin: node_unpublish_action
 configuration: {  }
