Config von Live exportiert

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -20,10 +20,12 @@ permissions:
   - 'create url aliases'
   - 'entityconnect add button'
   - 'entityconnect edit button'
+  - 'override all published option'
   - 'post comments'
   - 'skip comment approval'
   - 'translate interface'
   - 'use text format basic_html'
   - 'use text format tables_only'
+  - 'view any unpublished content'
   - 'view any webform submission'
   - 'view the administration theme'
