--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.redakteur.yml
@@ -20,7 +20,9 @@ permissions:
   - 'edit own event content'
   - 'entityconnect add button'
   - 'entityconnect edit button'
+  - 'override all published option'
   - 'view any unpublished article content'
+  - 'view any unpublished content'
   - 'view any unpublished page content'
   - 'view own unpublished content'
   - 'view the administration theme'
