EU Cookie Compliance mit Composer removed

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "require": {
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "^1.4",
-        "drush/drush": "^9.2",
-        "drupal/eu_cookie_compliance": "^1.0"
+        "drush/drush": "^9.2"
     },
     "replace": {
         "drupal/core": "^8.5"
