Cookie Banner mit Styling, Footer höher damit auf Desktop garantiert das Impressum nicht durch das Banner verdeckt wird.

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -28,6 +28,7 @@ module:
   entity_embed: 0
   entity_reference_revisions: 0
   entityconnect: 0
+  eu_cookie_compliance: 0
   eva: 0
   field: 0
   field_collection: 0
