--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/eu_cookie_compliance.settings.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/eu_cookie_compliance.settings.yml
@@ -13,7 +13,7 @@ popup_agreed:
 popup_agree_button_message: 'Ich stimme zu'
 popup_agreed_enabled: false
 popup_bg_hex: 0779bf
-popup_clicking_confirmation: true
+popup_clicking_confirmation: false
 popup_scrolling_confirmation: false
 popup_delay: 1000
 show_disagree_button: false
@@ -24,7 +24,7 @@ popup_height: null
 popup_hide_agreed: false
 popup_hide_button_message: Hide
 popup_info:
-  value: "<p>Wir benutzen Cookies auf dieser Seite, um die Bedienbarkeit für Sie zu verbessern.<br />\r\nWeitere Informationen zu Cookies finden Sie auf unserer <a data-entity-substitution=\"canonical\" data-entity-type=\"node\" data-entity-uuid=\"caad7246-a0d5-4bce-af94-bd9257a69321\" href=\"/node/359\">Datenschutzerklärung</a>.</p>\r\n"
+  value: "<p>Wir benutzen Cookies auf dieser Seite, um die Bedienbarkeit für Sie zu verbessern.<br />\r\nWeitere Informationen zu Cookies finden Sie auf unserer <a data-entity-type=\"node\" data-entity-uuid=\"caad7246-a0d5-4bce-af94-bd9257a69321\" href=\"/node/359\">Datenschutzerklärung</a>.</p>\r\n"
   format: basic_html
 mobile_popup_info:
   value: ''
